--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -32,10 +32,10 @@
 .gallery-container a div {
     width: 100%;
     height: 235px;
-    background-color: green;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    border-radius: 10px;
 }
 
 .gallery-container a h3 {
@@ -43,4 +43,46 @@
     font-size: 20px;
     font-weight: 700;
     color: #111;
+    text-align: center;
+}
+
+.gallery-container a p {
+    font-family: Catamaran;
+    font-size: 15px;
+    font-weight: 700;
+    color: #111;
+    text-align: center;
+}
+
+.gallery-upload {
+    text-align: center;
+    padding: 15px 15px 0 15px;
+    background-color: #F1F1F1;
+    border-radius: 10px;
+    margin: 10px 10px 0 10px;
+}
+
+.gallery-upload p {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.gallery-upload input[type="text"] {
+    padding: 5px;
+    margin: 5px;
+    border-radius: 10px;
+    border-color: #C0C0C7;
+    width: 200px;
+}
+
+.gallery-upload input[type="file"] {
+    margin: 10px 0 10px 60px;
+}
+
+.gallery-upload button {
+    padding: 5px 20px 5px 20px;
+    border-radius: 15px;
+    background-color: #4D4D4D;
+    color: #F9F9F9;
+    margin: 10px;
 }
