--- a/styles/main.css
+++ b/styles/main.css
@@ -220,15 +220,31 @@ header .header-login {
         margin-top: 25px;
     }
 
+    header .header-logout {
+        display: block;
+        font-family: Catamaran;
+        font-size: 15px;
+        color: #111;
+        text-transform: uppercase;
+        line-height: 38px;
+        border: 1px solid #111;
+        border-radius: 4px;
+        float: right;
+        padding: 0 5px;
+        margin-right: 50px;
+        margin-top: 25px;
+    }
+
     header .header-loggedin {
         display: block;
         font-family: Catamaran;
-        font-size: 16px;
+        font-size: 20px;
         color: #111;
         line-height: 38px;
         float: right;
         padding: 0 20px;
         margin-top: 25px;
+        font-weight: bold;
     }
 
 }
